[package]
name = "rapt"
version = "0.1.0"
authors = ["smallkirby <ssmallkirby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
simple_logger = "1.11.0"
flate2 = "1.0"
curl = "0.4.38"
bytes = "1.0.1"
