[package]
name = "rapt"
version = "0.1.0"
authors = ["smallkirby <ssmallkirby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
simple_logger = "1.11.0"
reqwest = {version = "0.11.3", features = ["blocking"]}
flate2 = "1.0.20"
clap = "2.33.3"
version-compare = "0.0.11"